tests/ui/resolve/issue-111727.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/issue-111727.rs:4:5
   |
LL |     std::any::Any::create();
   |     ^^^^^^^^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |     <dyn std::any::Any>::create();
   |     ++++              +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
