tests/ui/resolve/issue-111727.rs
//@ edition: 2021

fn main() {
    std::any::Any::create(); //~ ERROR
}
